--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ python-dotenv==1.0.0
 llama-index==0.10.27
 llama-index-llms-openai==0.1.15
 llama-index-embeddings-openai==0.1.7
+llama-index-vector-stores-faiss
 feedparser==6.0.11
+Crawl4AI==0.3.5
+streamlit==1.39.0
